# RG-dom-1

./: .gitignore  CMakeLists.txt  callbacks.h  load.h  main.cpp  window.h
res/: fragment.glsl  vertex.glsl
